cabecalho menu alteração cor das letras

--- a/css/header.css
+++ b/css/header.css
@@ -74,7 +74,7 @@ body, header, main, figure,img,h1,h2,h3,h4,h5,h6,div,ul,li,nav,a{
     font-weight: 600;
     font-size: 25px;
     font-variant-caps: small-caps;
-    text-shadow: -1px 1px 15px #48eaff
+    text-shadow: -1px 1px 15px #44daee
 }
 
 
