--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,15 @@
 /*Produto do video inicial*/
 
-.produtoInicial{}
-.figureLataWeg{
+.figureprodutoInicial{
     text-align-last: center;
     margin-block-start: -18px;
     margin-block-end: -35px;
     background-color: white;
 }
-.imgLataBrancaWeg{
+.imgProdutoInicial{
     width: 230px;
 }
-.tituloSrd501{
+.tituloProdutoInicial{
     font-size: 1.2em;
     text-align: center;
     color: white;
@@ -28,11 +27,13 @@
     color: #1030e3;
 }
 
+/*BOTÃO WHATS APP*/
 .areaBotao{
     text-align-last: center;
     background-color: white;
     margin-block-start: -5px;
-    padding: 8px 0px;
+    padding: 10px 0px 30px 0px;
+    border-bottom: 10px solid cornflowerblue;
 }
 
 .botaoContato{
@@ -50,4 +51,35 @@
     margin-left: 5px;
     font-weight: 800;
     color: black;
+}
+/*====================*/
+.produto01{}
+
+.produtoVideo{}
+
+.figureProduto01{
+    text-align-last: center;
+    margin-block-start: 25px;
+    margin-block-end: -9px;
+    background-color: white;
+}
+.imgProduto02{
+    width: 230px;
+}
+.tituloProduto02{
+    font-size: 1.2em;
+    text-align: center;
+    color: white;
+    border: 2px solid black;
+    background-color: darkblue;
+    border-radius: 13px;
+    margin-block-end: -4px;
+}
+.paragrafoProduto02{
+    padding: 0px 35px;
+    margin-block-start: 15px;
+    margin-block-end: 15px;
+    font-weight: 600;
+    background-color: white;
+    color: #1030e3;
 }
