--- a/index-css/header.css
+++ b/index-css/header.css
@@ -13,12 +13,13 @@ body, header, main, figure,img,h1,h2,h3,h4,h5,h6,div,ul,li,nav,a{
     grid-template-columns: 1fr 2fr 1fr;
     background-image: linear-gradient(to right, #ffffff 0%, #f2f2f5 25%, #d9d9d9 50%, #dee2e9 75%, white 100% );
     width: 100%;
-    height: 135px;
+    height: 140px;
 }
 
 .iconsCabecalho{
     align-self: end;
     margin-left: 5px;
+    padding: 0px 0px 30px 0px;
 }
 
 .navegacaoCabecalho{
@@ -29,12 +30,13 @@ body, header, main, figure,img,h1,h2,h3,h4,h5,h6,div,ul,li,nav,a{
     width: 50px;
 }    
 
+.figurelogotipo{
+    margin-top: -20px;
+}
+
 .logotipo{
-    background-position: center;
-    background-size: cover;
-    width: 236px;
-    height: 135px;
-    margin-left: 15px;
+    height: 190px;
+    display: block;
 }
 
 
