--- a/index-css/main.css
+++ b/index-css/main.css
@@ -1,10 +1,17 @@
+
 /*Produto do video inicial*/
+.produtoInicial{
+    padding-top: 5px;
+    background-image: url(../img/backgrround-colors-in-cel.jpg);
+    background-repeat: no-repeat;
+    background-size: 360px;
+    padding-bottom: 10px;
+}
 
 .figureprodutoInicial{
     text-align-last: center;
     margin-block-start: -18px;
     margin-block-end: -35px;
-    background-color: white;
 }
 .imgProdutoInicial{
     width: 230px;
@@ -15,25 +22,35 @@
     color: white;
     border: 2px solid black;
     background-color: darkblue;
-    border-radius: 13px;
     margin-block-end: -4px;
-}
-.paragrafoSrd501{
-    padding: 0px 35px;
-    margin-block-start: 15px;
-    margin-block-end: 15px;
-    font-weight: 600;
-    background-color: white;
-    color: #1030e3;
+    padding: 5px 0px 5px 0px
 }
 
-/*BOTÃO WHATS APP*/
-.areaBotao{
-    text-align-last: center;
-    background-color: white;
-    margin-block-start: -5px;
-    padding: 10px 0px 30px 0px;
-    border-bottom: 10px solid cornflowerblue;
+.divParagrafoSrd501{
+    background-color: aliceblue;
+    opacity: 80%;
+    margin-right: 10px;
+    margin-left: 10px;
+    position: relative;
+}
+
+.paragrafoSrd501{
+    padding: 5px 40px;
+    margin-block-start: 4px;
+    margin-block-end: 15px;
+    font-weight: 600;
+    color: black;
+    font-style: italic;
+    font-family: serif;
+}
+
+
+/*BOTÃO WHATS APP ANTIGO*/
+/* .areaBotao{
+    margin-block-start: -20px;
+    padding: 5px 0px 0px 135px;
+    border-bottom: 5px solid black;
+    position: absolute;
 }
 
 .botaoContato{
@@ -43,9 +60,10 @@
     background-color: lightgreen;
     border-color: lightgreen;
     width: 223px;
-    height: 54px;
-    margin-top: 15px;
+    height: 50px;
+    margin-top: -12px;
 }
+
 
 .imgWhatsApp{
     width: 56px;
@@ -55,12 +73,7 @@
 .botaoContato p{
     font-family: 'Alumni Sans Collegiate One', sans-serif;
     font-size: 30px;
-}
-
-/*====================*/
-.produto01{}
-
-.produtoVideo{}
+} */
 
 .figureProduto01{
     text-align-last: center;
@@ -111,10 +124,7 @@
 
 
 /*CAMPO DE RESULTADOS DO BUSCADOR*/
-.secaoResultados{}
-.listaResultados{}
-.listaResultados .produto__srd{}
-
+.divResultados{}
 
 
 .tagFigureSrd, .tagFigureflex{
